trying to fix wierd lsp glicth

--- a/index.html
+++ b/index.html
@@ -5173,35 +5173,11 @@ var $elm$core$Task$perform = F2(
 				A2($elm$core$Task$map, toMessage, task)));
 	});
 var $elm$browser$Browser$element = _Browser_element;
-var $author$project$Room$Allocated = function (a) {
-	return {$: 'Allocated', a: a};
+var $author$project$Main$Setup = function (a) {
+	return {$: 'Setup', a: a};
 };
-var $author$project$Main$ShowInput = {$: 'ShowInput'};
-var $author$project$Room$Unallocated = {$: 'Unallocated'};
-var $author$project$Main$initialModel = {
-	bidHistory: _List_Nil,
-	factor: 1.0,
-	formParticipant: '',
-	formRent: '',
-	formRoom: '',
-	participants: _List_fromArray(
-		[
-			{name: 'Steve'},
-			{name: 'Emily'}
-		]),
-	remainderRent: 0,
-	rooms: _List_fromArray(
-		[
-			{
-			status: $author$project$Room$Allocated(
-				{name: 'Steve'}),
-			title: 'front room'
-		},
-			{status: $author$project$Room$Unallocated, title: 'back room'}
-		]),
-	totalRent: $elm$core$Maybe$Just(400),
-	uiState: $author$project$Main$ShowInput
-};
+var $author$project$Main$initialModel = $author$project$Main$Setup(
+	{people: _List_Nil, roomNames: _List_Nil, totalRent: $elm$core$Maybe$Nothing});
 var $elm$core$Platform$Cmd$batch = _Platform_batch;
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
 var $elm$core$Platform$Sub$batch = _Platform_batch;
@@ -5209,442 +5185,13 @@ var $elm$core$Platform$Sub$none = $elm$core$Platform$Sub$batch(_List_Nil);
 var $author$project$Main$subscriptions = function (model) {
 	return $elm$core$Platform$Sub$none;
 };
-var $author$project$Main$Auction = {$: 'Auction'};
-var $elm$core$List$append = F2(
-	function (xs, ys) {
-		if (!ys.b) {
-			return xs;
-		} else {
-			return A3($elm$core$List$foldr, $elm$core$List$cons, ys, xs);
-		}
-	});
-var $elm$core$String$toFloat = _String_toFloat;
 var $author$project$Main$update = F2(
 	function (msg, model) {
-		switch (msg.$) {
-			case 'NoOp':
-				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
-			case 'SetFormRent':
-				var rentString = msg.a;
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{formRent: rentString}),
-					$elm$core$Platform$Cmd$none);
-			case 'SetFormParticipant':
-				var string = msg.a;
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{formParticipant: string}),
-					$elm$core$Platform$Cmd$none);
-			case 'SetFormRoom':
-				var string = msg.a;
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{formRoom: string}),
-					$elm$core$Platform$Cmd$none);
-			case 'SetTotalRent':
-				var rentString = msg.a;
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{
-							formRent: '',
-							totalRent: $elm$core$String$toFloat(rentString)
-						}),
-					$elm$core$Platform$Cmd$none);
-			case 'AddParticipant':
-				var nameString = msg.a;
-				var _new = {name: nameString};
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{
-							formParticipant: '',
-							participants: A2(
-								$elm$core$List$append,
-								model.participants,
-								_List_fromArray(
-									[_new]))
-						}),
-					$elm$core$Platform$Cmd$none);
-			case 'DeleteParticipant':
-				var person = msg.a;
-				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
-			case 'AddRoom':
-				var newRoomString = msg.a;
-				var newRoom = {status: $author$project$Room$Unallocated, title: newRoomString};
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{
-							formRoom: '',
-							rooms: A2(
-								$elm$core$List$append,
-								model.rooms,
-								_List_fromArray(
-									[newRoom]))
-						}),
-					$elm$core$Platform$Cmd$none);
-			case 'DeleteRoom':
-				var room = msg.a;
-				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
-			case 'StartAuction':
-				var _v1 = model.totalRent;
-				if (_v1.$ === 'Nothing') {
-					return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
-				} else {
-					var rent = _v1.a;
-					return _Utils_Tuple2(
-						_Utils_update(
-							model,
-							{uiState: $author$project$Main$Auction}),
-						$elm$core$Platform$Cmd$none);
-				}
-			default:
-				var item = msg.a;
-				return _Utils_Tuple2(
-					_Utils_update(
-						model,
-						{
-							bidHistory: A2($elm$core$List$cons, item, model.bidHistory)
-						}),
-					$elm$core$Platform$Cmd$none);
-		}
+		return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
 	});
-var $author$project$Auction$Bid = function (a) {
-	return {$: 'Bid', a: a};
-};
-var $author$project$Auction$Fold = function (a) {
-	return {$: 'Fold', a: a};
-};
-var $author$project$Main$ReceiveHistory = function (a) {
-	return {$: 'ReceiveHistory', a: a};
-};
-var $author$project$Main$StartAuction = {$: 'StartAuction'};
-var $elm$html$Html$button = _VirtualDom_node('button');
 var $elm$html$Html$div = _VirtualDom_node('div');
-var $elm$html$Html$h3 = _VirtualDom_node('h3');
-var $author$project$Auction$loggifyHistoryItem = function (item) {
-	if (item.$ === 'Bid') {
-		var options = item.a;
-		return {
-			bidAmount: $elm$core$Maybe$Just(options.amount),
-			bidder: options.bidder
-		};
-	} else {
-		var person = item.a;
-		return {bidAmount: $elm$core$Maybe$Nothing, bidder: person};
-	}
-};
-var $elm$html$Html$p = _VirtualDom_node('p');
-var $elm$core$String$concat = function (strings) {
-	return A2($elm$core$String$join, '', strings);
-};
-var $elm$core$String$fromFloat = _String_fromNumber;
-var $author$project$Auction$parseHistoryLogItem = function (item) {
-	var _v0 = item.bidAmount;
-	if (_v0.$ === 'Nothing') {
-		return $elm$core$String$concat(
-			_List_fromArray(
-				['{', item.bidder.name, ' folded...', '}']));
-	} else {
-		var amount = _v0.a;
-		return $elm$core$String$concat(
-			_List_fromArray(
-				[
-					'{',
-					item.bidder.name,
-					' made a bid of ',
-					$elm$core$String$fromFloat(amount),
-					'}'
-				]));
-	}
-};
-var $elm$virtual_dom$VirtualDom$text = _VirtualDom_text;
-var $elm$html$Html$text = $elm$virtual_dom$VirtualDom$text;
-var $author$project$Main$historyLogView = function (history) {
-	return A2(
-		$elm$html$Html$div,
-		_List_Nil,
-		_List_fromArray(
-			[
-				A2(
-				$elm$html$Html$h3,
-				_List_Nil,
-				_List_fromArray(
-					[
-						$elm$html$Html$text('History')
-					])),
-				A2(
-				$elm$html$Html$div,
-				_List_Nil,
-				A2(
-					$elm$core$List$map,
-					function (x) {
-						return A2(
-							$elm$html$Html$p,
-							_List_Nil,
-							_List_fromArray(
-								[
-									$elm$html$Html$text(
-									$author$project$Auction$parseHistoryLogItem(
-										$author$project$Auction$loggifyHistoryItem(x)))
-								]));
-					},
-					history))
-			]));
-};
-var $elm$virtual_dom$VirtualDom$Normal = function (a) {
-	return {$: 'Normal', a: a};
-};
-var $elm$virtual_dom$VirtualDom$on = _VirtualDom_on;
-var $elm$html$Html$Events$on = F2(
-	function (event, decoder) {
-		return A2(
-			$elm$virtual_dom$VirtualDom$on,
-			event,
-			$elm$virtual_dom$VirtualDom$Normal(decoder));
-	});
-var $elm$html$Html$Events$onClick = function (msg) {
-	return A2(
-		$elm$html$Html$Events$on,
-		'click',
-		$elm$json$Json$Decode$succeed(msg));
-};
-var $author$project$Main$AddParticipant = function (a) {
-	return {$: 'AddParticipant', a: a};
-};
-var $author$project$Main$SetFormParticipant = function (a) {
-	return {$: 'SetFormParticipant', a: a};
-};
-var $elm$html$Html$input = _VirtualDom_node('input');
-var $elm$html$Html$Events$alwaysStop = function (x) {
-	return _Utils_Tuple2(x, true);
-};
-var $elm$virtual_dom$VirtualDom$MayStopPropagation = function (a) {
-	return {$: 'MayStopPropagation', a: a};
-};
-var $elm$html$Html$Events$stopPropagationOn = F2(
-	function (event, decoder) {
-		return A2(
-			$elm$virtual_dom$VirtualDom$on,
-			event,
-			$elm$virtual_dom$VirtualDom$MayStopPropagation(decoder));
-	});
-var $elm$json$Json$Decode$field = _Json_decodeField;
-var $elm$json$Json$Decode$at = F2(
-	function (fields, decoder) {
-		return A3($elm$core$List$foldr, $elm$json$Json$Decode$field, decoder, fields);
-	});
-var $elm$json$Json$Decode$string = _Json_decodeString;
-var $elm$html$Html$Events$targetValue = A2(
-	$elm$json$Json$Decode$at,
-	_List_fromArray(
-		['target', 'value']),
-	$elm$json$Json$Decode$string);
-var $elm$html$Html$Events$onInput = function (tagger) {
-	return A2(
-		$elm$html$Html$Events$stopPropagationOn,
-		'input',
-		A2(
-			$elm$json$Json$Decode$map,
-			$elm$html$Html$Events$alwaysStop,
-			A2($elm$json$Json$Decode$map, tagger, $elm$html$Html$Events$targetValue)));
-};
-var $elm$json$Json$Encode$string = _Json_wrap;
-var $elm$html$Html$Attributes$stringProperty = F2(
-	function (key, string) {
-		return A2(
-			_VirtualDom_property,
-			key,
-			$elm$json$Json$Encode$string(string));
-	});
-var $elm$html$Html$Attributes$placeholder = $elm$html$Html$Attributes$stringProperty('placeholder');
-var $elm$html$Html$Attributes$value = $elm$html$Html$Attributes$stringProperty('value');
-var $author$project$Main$participantCreator = function (model) {
-	return A2(
-		$elm$html$Html$div,
-		_List_Nil,
-		_List_fromArray(
-			[
-				A2(
-				$elm$html$Html$input,
-				_List_fromArray(
-					[
-						$elm$html$Html$Attributes$placeholder('Enter Participant'),
-						$elm$html$Html$Attributes$value(model.formParticipant),
-						$elm$html$Html$Events$onInput($author$project$Main$SetFormParticipant)
-					]),
-				_List_Nil),
-				A2(
-				$elm$html$Html$button,
-				_List_fromArray(
-					[
-						$elm$html$Html$Events$onClick(
-						$author$project$Main$AddParticipant(model.formParticipant))
-					]),
-				_List_fromArray(
-					[
-						$elm$html$Html$text('Add')
-					]))
-			]));
-};
-var $author$project$Main$SetFormRent = function (a) {
-	return {$: 'SetFormRent', a: a};
-};
-var $author$project$Main$SetTotalRent = function (a) {
-	return {$: 'SetTotalRent', a: a};
-};
-var $author$project$Main$rentSetter = function (model) {
-	return A2(
-		$elm$html$Html$div,
-		_List_Nil,
-		_List_fromArray(
-			[
-				A2(
-				$elm$html$Html$input,
-				_List_fromArray(
-					[
-						$elm$html$Html$Attributes$placeholder('Total Rent'),
-						$elm$html$Html$Attributes$value(model.formRent),
-						$elm$html$Html$Events$onInput($author$project$Main$SetFormRent)
-					]),
-				_List_Nil),
-				A2(
-				$elm$html$Html$button,
-				_List_fromArray(
-					[
-						$elm$html$Html$Events$onClick(
-						$author$project$Main$SetTotalRent(model.formRent))
-					]),
-				_List_fromArray(
-					[
-						$elm$html$Html$text('Set')
-					]))
-			]));
-};
-var $author$project$Main$AddRoom = function (a) {
-	return {$: 'AddRoom', a: a};
-};
-var $author$project$Main$SetFormRoom = function (a) {
-	return {$: 'SetFormRoom', a: a};
-};
-var $author$project$Main$roomAdder = function (model) {
-	return A2(
-		$elm$html$Html$div,
-		_List_Nil,
-		_List_fromArray(
-			[
-				A2(
-				$elm$html$Html$input,
-				_List_fromArray(
-					[
-						$elm$html$Html$Events$onInput($author$project$Main$SetFormRoom),
-						$elm$html$Html$Attributes$placeholder('Create a new room'),
-						$elm$html$Html$Attributes$value(model.formRoom)
-					]),
-				_List_Nil),
-				A2(
-				$elm$html$Html$button,
-				_List_fromArray(
-					[
-						$elm$html$Html$Events$onClick(
-						$author$project$Main$AddRoom(model.formRoom))
-					]),
-				_List_fromArray(
-					[
-						$elm$html$Html$text('Add Room')
-					]))
-			]));
-};
-var $author$project$Main$roomToString = function (room) {
-	return room.title;
-};
-var $author$project$Main$showCurrentOffer = function (offer) {
-	return A2(
-		$elm$html$Html$div,
-		_List_Nil,
-		_List_fromArray(
-			[
-				A2(
-				$elm$html$Html$p,
-				_List_Nil,
-				_List_fromArray(
-					[
-						$elm$html$Html$text(
-						offer.person.name + (' would you like to bid ' + ($elm$core$String$fromFloat(offer.amount) + (' for ' + $author$project$Main$roomToString(offer.room)))))
-					]))
-			]));
-};
 var $author$project$Main$view = function (model) {
-	var _v0 = model.uiState;
-	if (_v0.$ === 'ShowInput') {
-		return A2(
-			$elm$html$Html$div,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$author$project$Main$rentSetter(model),
-					$author$project$Main$participantCreator(model),
-					$author$project$Main$roomAdder(model),
-					A2(
-					$elm$html$Html$button,
-					_List_fromArray(
-						[
-							$elm$html$Html$Events$onClick($author$project$Main$StartAuction)
-						]),
-					_List_fromArray(
-						[
-							$elm$html$Html$text('Start')
-						]))
-				]));
-	} else {
-		return A2(
-			$elm$html$Html$div,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$author$project$Main$showCurrentOffer(
-					{
-						amount: 450.0,
-						person: {name: 'Steve'},
-						room: {status: $author$project$Room$Unallocated, title: 'front room'}
-					}),
-					A2(
-					$elm$html$Html$button,
-					_List_fromArray(
-						[
-							$elm$html$Html$Events$onClick(
-							$author$project$Main$ReceiveHistory(
-								$author$project$Auction$Bid(
-									{
-										amount: 450,
-										bidder: {name: 'Steve'}
-									})))
-						]),
-					_List_fromArray(
-						[
-							$elm$html$Html$text('accept')
-						])),
-					A2(
-					$elm$html$Html$button,
-					_List_fromArray(
-						[
-							$elm$html$Html$Events$onClick(
-							$author$project$Main$ReceiveHistory(
-								$author$project$Auction$Fold(
-									{name: 'Steve'})))
-						]),
-					_List_fromArray(
-						[
-							$elm$html$Html$text('decline')
-						])),
-					$author$project$Main$historyLogView(model.bidHistory)
-				]));
-	}
+	return A2($elm$html$Html$div, _List_Nil, _List_Nil);
 };
 var $author$project$Main$main = $elm$browser$Browser$element(
 	{
